@@ -1,20 +1,19 @@
-13781c4b93c3be3213ef7a631ed084ed *ChangeLog
-f5f9fcc04183f360a36148e113319563 *DESCRIPTION
+b5a4a9b2b0accbf59c6f8a8c6a351d0f *ChangeLog
+2ee6482ff5dacfb814055a667d81331d *DESCRIPTION
 8c6df9c956e3d0c17e72cb1cb038adee *NAMESPACE
-e88734529d94ac1199a38057e5d1a35f *R/SocialMediaMineR-internal.R
-4b4c01f17047dd8ec8543fffa910dd3a *R/get_facebook.R
-cd79afee64884e41fd6929915697538f *R/get_linkedin.R
-1970b1ea8df31e3541efeb68b2d052ab *R/get_pinterest.R
-41b03c6a0c765b9c9e58212b23916eff *R/get_reddit.R
-ad97723a4596d606ec6db3a2d3d08ed9 *R/get_socialmedia.R
-13240a34fef6e8e4f5eadbd05af78820 *R/get_stumbleupon.R
+61194d95db6e32f167859580d59d804f *R/get_facebook.R
+0b097d2e6ff6e616651f96d4512bf53a *R/get_linkedin.R
+d24a1728e85995c35d7c6e4f65a3a32b *R/get_pinterest.R
+baa5b6e3ed87e9806e3acf6878f8ad23 *R/get_reddit.R
+cb70c271ddc552b5dbfe3db6a13b1e7e *R/get_socialmedia.R
+a653d81005f20130296c7245955c5ba8 *R/get_stumbleupon.R
 680742948678bdcdbb62652f2053e333 *R/get_url.R
 c6b37bbda83c5ae4c509ed9d3b7efdd3 *inst/CITATION
-378e7648d0cf138cbe8e4e0970872e2c *man/SocialMediaMineR-package.Rd
-d34b9f4fd86f096510989ed6554063d8 *man/get_facebook.Rd
-a8c9de69313943395a83ed78f2bfd533 *man/get_linkedin.Rd
-37429df06a007546559b15ebbb876493 *man/get_pinterest.Rd
-197edd603bab453ebb115c307c78c9f0 *man/get_reddit.Rd
-8ca552e27edd38fa0470a0b113e43c47 *man/get_socialmedia.Rd
-a5025009cb8380a7f445eb6c33c18d7e *man/get_stumbleupon.Rd
-f9fb159e12897a4e92e7150d4d667f28 *man/get_url.Rd
+06faa3427c767b27568af99305949969 *man/SocialMediaMineR-package.Rd
+629dbbd8b7aaee3840f33f596b14fe3f *man/get_facebook.Rd
+60215f81ea557d4460a4aa0b810295cc *man/get_linkedin.Rd
+7c1df177822e427f15c0fd720a72e7af *man/get_pinterest.Rd
+4de153de92eb5535a5b9000c99628447 *man/get_reddit.Rd
+1cabf01491a1da38917ac79b9cc6ccd8 *man/get_socialmedia.Rd
+5931478e6b050f33a6c888bf7ccef07f *man/get_stumbleupon.Rd
+08852cad32253421a0de8f0ad2d57133 *man/get_url.Rd
