@@ -1,127 +1,0 @@
-.Random.seed <-
-c(403L, 10L, -697704092L, 1466889383L, -33646083L, -1295010828L, 
--267531046L, -2117607899L, 792245055L, -1420001082L, -1739154096L, 
--2039814797L, 854486929L, 1973961152L, -593443938L, 2123029865L, 
-1220388251L, 2127317162L, 836155084L, 630986639L, 2141901765L, 
--1007896708L, 986531794L, 564373325L, 609678855L, 682345966L, 
-558518472L, 2086838219L, -304514519L, 131680376L, 1859077542L, 
-1486032833L, -924576685L, 324090626L, -263692748L, 1405737911L, 
--1560556627L, 780804292L, 1164285162L, -1558291627L, 1556786415L, 
--1917000970L, -1289908704L, 1564660707L, 1829230721L, 2098317040L, 
--1991776882L, 1126189817L, -889452405L, 1628491962L, 1657930684L, 
--202041089L, 1360358485L, 500619116L, 221874114L, -1991544803L, 
--1978117993L, 145878526L, 846667192L, 1872261531L, 1295874041L, 
--1899339960L, 866396790L, -1997970511L, -132579869L, 967320242L, 
--1449648380L, 1307280455L, 707285789L, -448501356L, -1041740486L, 
--1211190907L, 83100255L, 361882854L, 1618999152L, -1859372909L, 
-1227027761L, -988339232L, -547950466L, -1151587575L, 56782139L, 
-856867082L, -46690068L, 1327717743L, -870374747L, 1275321436L, 
--74056654L, -1303487699L, 1093165543L, 511892750L, -1743473944L, 
--625443605L, -1985202807L, 835781912L, -1624594362L, -652685151L, 
--1111926989L, -1063598430L, -1768901228L, 1102044183L, -327136243L, 
-1701136676L, 804381962L, 583631989L, 1497870287L, -205393706L, 
-1196413056L, 337481411L, -41428895L, 1117825232L, -205659602L, 
-1816830937L, 591637483L, 48794202L, -445694948L, -1497855713L, 
--1976297099L, 74455052L, 2093498850L, -936977731L, 1806611767L, 
--1939293730L, 1330011928L, -313117061L, 1792291865L, -650402648L, 
--48767402L, -1396262191L, -1673495933L, -611757806L, 681759908L, 
--1443036057L, -414609987L, 389107508L, -231560038L, -1552330011L, 
-973007999L, -2009913850L, 360853904L, -1060295629L, -1174117423L, 
--835802752L, -878394274L, 276370345L, -209991077L, 1324150378L, 
-1246106380L, -428526257L, -2020708859L, -349612868L, 1801831826L, 
-709336717L, -1478806329L, 990187950L, 339541000L, -1249497077L, 
--1853373207L, 1815094200L, -760910746L, -1741550335L, 1110641555L, 
--1150677950L, 174978036L, 223657463L, -1213357587L, 1569460868L, 
--1022835542L, -352816619L, -125858129L, -1781715786L, 1346362080L, 
--750156253L, 1905854785L, -204418000L, 997920334L, -1586373959L, 
--403865909L, 1676339066L, 1172328060L, -1996993857L, -1554879595L, 
--902067284L, -285433470L, -2083395747L, 1126582871L, -967884482L, 
--832519816L, -562234789L, -1751298631L, 997486600L, 648499894L, 
--2056377871L, 1432100899L, -928423822L, -1798667580L, -1120062329L, 
-1942456413L, 1181371988L, 1784687738L, 786085829L, 1955100959L, 
-341801126L, -230122960L, 122822867L, -247353615L, 951782944L, 
--960268098L, 1625054409L, 1129453179L, 941691978L, -121471828L, 
-529869743L, -1777381531L, 182789404L, -1502777998L, 1669326317L, 
--1626150361L, -1014150578L, 629345960L, -349387605L, -2094963255L, 
-1120512472L, -1119289210L, 1881541985L, 1923678451L, 1655353186L, 
-1346423252L, -1290765097L, -949010739L, -1089517404L, -1980568904L, 
--1337020582L, 877542800L, -941650564L, 2056687892L, 2093432130L, 
-2114601728L, -20616260L, 1100014416L, 541963554L, -1230714552L, 
--1741304820L, -348418980L, 193000658L, -1589169152L, 1152681812L, 
--785724952L, 1149000698L, 1292978896L, 1260135724L, -1860551436L, 
-1764524946L, -918631328L, 859986188L, -942085408L, -1896671902L, 
--516090200L, 137342540L, -1147505796L, -540000462L, -335404432L, 
--117804732L, -129382440L, -1239649158L, -1247077840L, 605474492L, 
-90005332L, 543624770L, 1582260128L, -346104644L, -1342344752L, 
-226193762L, -431036440L, -1391871028L, -1310445828L, -1001651214L, 
--2027998080L, 264642804L, 684671112L, 1344811322L, -40955056L, 
-859054188L, 1516428436L, -313342638L, -2019511584L, 1103383756L, 
--440410976L, 303660418L, 421350632L, 1413926124L, 216246332L, 
--1366651790L, -1808081808L, -365063644L, -197159368L, 1303949850L, 
-389305552L, -37910980L, 1506730132L, 597085314L, -773551168L, 
-1113223484L, 1309601424L, 1999168546L, 505360392L, -648874868L, 
-1748935708L, 2139009170L, -1844288384L, -1579910124L, -189876440L, 
--924522438L, -2071906096L, -1644906388L, 469528244L, 38775826L, 
--905956384L, -1529625652L, 2116592096L, -1210841054L, -137386712L, 
--1956802292L, 1790689852L, -1186359054L, 1723227376L, -969115836L, 
--1146356648L, -394799558L, -1690324752L, 1549039292L, -1408454124L, 
-527219906L, 424389216L, 392774012L, -1151497008L, -1583364062L, 
--739019608L, -1310727796L, -754175556L, 1682730034L, -1488832704L, 
--212684108L, 1099038024L, -1821780294L, -1107082480L, 472938732L, 
-731319380L, 1030794002L, 552275360L, 2071345100L, 481571680L, 
-237452482L, 1994334760L, -1923203668L, 2054638396L, -1667547278L, 
-445964080L, 1955660836L, 2002895416L, -1255250214L, -508869744L, 
--88336132L, 2007253396L, 686588738L, 463321600L, 833635388L, 
-1539861072L, -1418279774L, 635828040L, -1011835380L, -1840914724L, 
--2106654638L, -233480064L, 1791695700L, 1036624872L, -1323236614L, 
-304340816L, 312164396L, -1877569164L, -77417838L, -793099680L, 
-48678028L, 1991210336L, -840455966L, -1081704280L, -2019325236L, 
-400418300L, 1827594162L, 2112567280L, 1120617924L, -1901307560L, 
--1400867462L, -393132624L, -1858737732L, 1353579092L, -1101304382L, 
-575028000L, 1175120828L, 1731658832L, 1803345890L, 1716405096L, 
-549193548L, 1520450300L, -430269710L, -1577848576L, 1021187188L, 
-1249409544L, -1737569862L, 919239120L, -1118008340L, 420398996L, 
-1428180178L, 1760233568L, -1714413236L, 1397647136L, -1022285182L, 
--1633981976L, 1425871852L, 1956085308L, 752376434L, 1379721072L, 
--88346332L, 61451832L, 592633242L, -304794160L, 1471992252L, 
--1217248620L, 501618306L, -1243573824L, -430809284L, -1540884848L, 
--360959198L, -1365400056L, -555387124L, -315852900L, 97976338L, 
--264838272L, -1417674988L, -189314776L, -1117904838L, -1848600624L, 
--1067169172L, -384201676L, -1763871598L, 1602469216L, 975393100L, 
-1779116512L, -530341982L, -2046431320L, -257493876L, -440773700L, 
-603076722L, -1144400912L, 1279311940L, 470496344L, -1903865798L, 
-559128240L, -949433138L, 1117574651L, 1890922077L, 235567498L, 
-2069471656L, -858775791L, 1699724803L, 1177164036L, 743279922L, 
--569681017L, -1515410991L, 1242260310L, -1303574220L, -1130407867L, 
--796991345L, -1307226616L, -1370508762L, -1171295533L, 1211302965L, 
--1152689262L, -594637984L, -723929399L, -848369157L, -2114251316L, 
--995421094L, 829933903L, -841803751L, -248062418L, -299629508L, 
-1242247597L, -394591657L, 976583584L, -437690114L, 643564491L, 
--1652697651L, -779151110L, 1013132088L, -835254047L, 1468378003L, 
-1749634996L, -1939581758L, -1176151849L, -1501354719L, 779298022L, 
--667848220L, 697167125L, -631315137L, -2116798248L, 724461814L, 
--67546365L, -427490235L, -1419174814L, 739982288L, 1140510969L, 
--1629529557L, -1949940324L, -517095990L, -1299861825L, 1372958729L, 
--1209757410L, 1526404300L, 1205158045L, -138955481L, 1020847952L, 
--1373378066L, -1885978981L, 1010430205L, 735770602L, 1402630280L, 
--608522703L, -1434711901L, -1604125532L, 1477172562L, -139650905L, 
-830344433L, 498416694L, 846771412L, -1882482587L, -140049809L, 
-2008046760L, -653878778L, 382327603L, -1609314411L, 863996914L, 
-1053261888L, -1873567319L, -1600229349L, 1408261612L, 1725939194L, 
-1219783215L, -1867012551L, 604401742L, 1740707996L, 56236557L, 
-382015095L, 781602432L, -1299034914L, 1892700075L, -1131142995L, 
--1907845862L, -688836136L, -434378175L, 1915814131L, -1206452460L, 
--1936714078L, 41488311L, -675431551L, 1780394374L, -449270844L, 
--1825892619L, -1046305953L, 924921272L, 224883862L, 1494993571L, 
--20206491L, -1044547198L, 827441904L, -1137846631L, 1167866507L, 
--1492001924L, 49946026L, -51759649L, 1733821289L, 1399874430L, 
-405248876L, 1611231165L, 14818439L, -1856262032L, 1900411662L, 
-389634107L, -1592273123L, 481277386L, 813764328L, -595476015L, 
-564188099L, -1007194940L, 173421426L, 218656327L, 1321700881L, 
-1587912598L, -313974028L, 960251013L, -786810417L, -941544248L, 
-973184358L, 222101395L, 110371061L, -1519654702L, -569370848L, 
-1949685513L, -848527301L, -1797442164L, 2129456154L, 1921515663L, 
--1442523175L, 837482606L, 651918332L, -2085295763L, 185131799L, 
--2132032800L, -1935392578L, 373010059L, -153225971L, 287144250L, 
-807012728L, 444672801L, 1290468307L, -1206418700L, 1275327714L
-)
